--- a/app/views/pages/todolist.html.erb
+++ b/app/views/pages/todolist.html.erb
@@ -12,7 +12,9 @@
   </thead>
 
   <%= render 'form_for_add_task' %> 
-  <%= render 'form_for_filling_project_by_task' %> 
+  <tbody id="table">
+    <%= render 'form_for_filling_project_by_task' %> 
+  </tbody>
 </table>
 <br><br><br>
 <% end %>
