--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,8 @@
       <%= link_to "ToDoList", root_path, id: "logo" %>
       <nav>
     <ul class="nav pull-right">
-      <li><%= link_to "Home", root_path %></li>  
+      <li><%= link_to "SQL Tas" %></li>  
       <li><%= link_to "Lists", todolist_path%></li>
-      <li><a href="#">to Track</a></li>
      
     </ul>
         <ul class="nav navbar-nav navbar-right">
