--- a/app/views/pages/todolist.html.erb
+++ b/app/views/pages/todolist.html.erb
@@ -30,6 +30,10 @@ $(document).ready(function() {
     $(".checked").click(function(e) {
       $(this).closest(".forchack").toggleClass('stroked');
     });
+    
+    $(".icon-move").click(function(){
+    $(this).closest(".forchack").sortable();
+    });
 });
 </script>
 
