--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,10 @@
-@import "bootstrap";
-/* mixins, variables, etc. */
 
+/* mixins, variables, etc. */
+/*
 $grayMediumLight: #eaeaea;
 
 /* universal */
-
+/*
 html {
   overflow-y: scroll;
 }
@@ -29,7 +29,7 @@ textarea {
 }
 
 /* typography */
-
+/*
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
@@ -58,7 +58,7 @@ p {
 
 /* header */
 
-
+/*
 #logo {
   float: left;
   margin-right: 10px;
@@ -76,7 +76,7 @@ p {
 }
 
 /* footer */
-
+/*
 footer {
 	position: absolute;
     bottom: 0;
@@ -84,7 +84,7 @@ footer {
     left: 10%;
  	height: 25px;
   
-  /*border-bottom: 1px solid $grayMediumLight;*/
+  /*border-bottom: 1px solid $grayMediumLight;*//*
   color: $grayLight;
   a {
     color: $gray;
@@ -103,4 +103,4 @@ footer {
       margin-left: 10px;
     }
   }
-}
+}*/
