--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,7 @@
 <footer class="footer">
 	  <small>
-    <a href="http://vk.com/neon_ua">for Ruby Garage</a>
-    by Galenko
-  </small>
+      for Ruby Garage <a href="http://vk.com/neon_ua"> by Galenko</a>
+    </small>
   <nav>
     <ul  class="footer">
       <li>Help</li>
