--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,18 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
+  
     <div class="container">
       <%= link_to "ToDoList", root_path, id: "logo" %>
       <nav>
-    <ul class="nav pull-right">
-      <li><%= link_to "SQL Tas" %></li>  
-      <li><%= link_to "Lists", todolist_path%></li>
-     
-    </ul>
+        <ul class="nav navbar-nav pull-left">
+          <li><%= link_to "SQL Tas" %></li>  
+          <li><%= link_to "Lists", todolist_path%></li>
+        </ul>
+        
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
           <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
       </nav>
     </div>
-  </div>
+  
 </header>
