--- a/app/views/pages/_form_for_filling_project_by_task.html.erb
+++ b/app/views/pages/_form_for_filling_project_by_task.html.erb
@@ -3,9 +3,9 @@
         <td><%= check_box_tag 'done', 'yes', false, class: 'checked' %></td>  
         <td class="tasks"><%= task.name %></td>
        
-        <td class="move control" onselectstart="return false" onmousedown="return false"><span class="icon-move" aria-hidden="true"></span>|</td>
-        <td><%= link_to '', edit_task_path(task), class: "icon-pencil" %></td>
-        <td>|<%= link_to '', task, class: "icon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="move control" onselectstart="return false" onmousedown="return false"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span>|</td>
+        <td><%= link_to '', edit_task_path(task), class: "glyphicon glyphicon-pencil" %></td>
+        <td>|<%= link_to '', task, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></td>
         
       </tr>
     <% end %>
