--- a/app/views/pages/todolist.html.erb
+++ b/app/views/pages/todolist.html.erb
@@ -3,11 +3,11 @@
   <thead>
   <!--PROJECTS-->
     <tr onselectstart="return false" onmousedown="return false">
-      <th class="done"><span class="glyphicons glyphicons-notes"></span></th>
+      <th class="done"><span class=""></span></th>
       <th colspan="2"><%= project.name %></th>
       <%= hidden_field_tag(:projects, project.id) %>
-      <th><%= link_to '', edit_project_path(project), class: "icon-pencil" %></th>
-      <th><%= link_to '', project, class: "icon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></th>
+      <th><%= link_to '', edit_project_path(project), class: "glyphicon glyphicon-pencil" %></th>
+      <th><%= link_to '', project, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></th>
     </tr>
   </thead>
 
@@ -26,14 +26,6 @@
 
 <script type="text/javascript">
   //$('td.move').parent('tr').addClass('styless');
-$(document).ready(function() {
-    $(".checked").click(function(e) {
-      $(this).closest(".forchack").toggleClass('stroked');
-    });
-    
-    $(".icon-move").click(function(){
-    $(this).closest(".forchack").sortable();
-    });
-});
+
 </script>
 
