install device, made autentification

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -67,3 +67,4 @@ bottom: 50px;
 .stroked{text-decoration: line-through!important;}
 .addTask{width: 120px !important;}
 .input-append{border: 0!important; margin: 0!important; padding: 0!important;}
+.hi{color: grey; position: absolute; margin-top: 17px!important; margin-left: 55px;}
