--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,15 +3,26 @@
     <div class="container">
       <%= link_to "ToDoList", root_path, id: "logo" %>
       <nav>
+       <% if user_signed_in? %>
         <ul class="nav navbar-nav pull-left">
           <li><%= link_to "SQL Tas" %></li>  
           <li><%= link_to "Lists", todolist_path%></li>
         </ul>
         
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+  
+              <span class="hi">Hi, <%= current_user.email %></span>
+              <li><%= link_to 'Log Out ', destroy_user_session_path, class: "glyphicon glyphicon-user", :method => :delete %></li>
+          
+            <% else %>
+
+        <ul class="nav navbar-nav navbar-right"><!-- Дублируется после else  -->
+              <li><%= link_to ' Login ', new_user_session_path, class: "glyphicon glyphicon-log-in" %></li> 
+              <li> <%= link_to 'Sign Up ', new_user_registration_path, class: "glyphicon glyphicon-user" %></li>
+          
+
         </ul>
+        <% end %>
       </nav>
     </div>
   
