--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
+    <%= f.hidden_field :user_id, value: @user_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
