--- a/app/views/pages/todolist.html.erb
+++ b/app/views/pages/todolist.html.erb
@@ -1,29 +1,29 @@
 <% @projects.each do |project| %>
-<table class="table table-hover">
-  <thead>
-  <!--PROJECTS-->
-    <tr onselectstart="return false" onmousedown="return false">
-      <th class="done"><span class=""></span></th>
-      <th colspan="2"><%= project.name %></th>
+  <table class="table table-hover">
+    <thead>
+    <!--PROJECTS-->
+      <tr onselectstart="return false" onmousedown="return false">
+        <th class="done"><span class=""></span></th>
+        <th colspan="2"><%= project.name %></th>
 
-      <% @project_id = project.id %> <!-- Add Task to direct Project -->
-      
-      <%= hidden_field_tag(:projects, project.id) %>
-      <th><%= link_to '', edit_project_path(project), class: "glyphicon glyphicon-pencil" %></th>
-      <th><%= link_to '', project, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></th>
-    </tr>
-  </thead>
+        <% @project_id = project.id %> <!-- Add Task to direct Project -->
+        <p>---*** <%= @project_id %> ***---</p>
+        <%= hidden_field_tag(:projects, project.id) %>
+        <th><%= link_to '', edit_project_path(project), class: "glyphicon glyphicon-pencil" %></th>
+        <th><%= link_to '', project, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></th>
+      </tr>
+    </thead>
 
-  <%= render 'form_for_add_task' %> 
+    <%= render 'form_for_add_task' %> 
 
-  <tbody>
-    <%= render 'form_for_filling_project_by_task' %> 
-  </tbody>
-</table>
+    <tbody>
+      <%= render 'form_for_filling_project_by_task' %> 
+    </tbody>
+  </table>
 <br><br><br>
 
 <% end %>
 
 <p> user_id = <%= @user_id %></p>
-
+<p> <%= @project_id %> </p>
 <%= link_to 'Add ToDoList', new_project_path, class: "btn btn-success", id: "addTDL", title: "Создать новый проэкт" %>
