--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,20 @@
 <%= render 'layouts/header' %>
 	<p class="notice"><%= notice %></p>
 	<p class="alert"><%= alert %></p>
-<%= yield %>
-
-<%= render 'layouts/footer' %>
+	<div class="container">
+	<div class="row">
+		<div class="col-lg-2"></div>
+		<div class="col-lg-7">
+			<%= yield %>		
+		</div>
+	</div>
+	<div class="row">
+		<%= render 'layouts/footer' %>
+		
+	</div>
+	</div>
+		
+	
+	
 </body>
 </html>
