--- a/app/views/pages/todolist.html.erb
+++ b/app/views/pages/todolist.html.erb
@@ -2,14 +2,14 @@
   <table class="table table-hover">
     <thead>
     <!--PROJECTS-->
-      <tr onselectstart="return false" onmousedown="return false">
+      <tr>
         <th class="done"><span class=""></span></th>
-        <th colspan="2"><%= project.name %></th>
+        <th colspan="2" id= <%="project_name_#{project.id}"%> ><%= project.name %></th>
 
         <% @project_id = project.id %> <!-- Add Task to direct Project -->
 
         <%= hidden_field_tag(:projects, project.id) %>
-        <th><%= link_to '', edit_project_path(project), class: "glyphicon glyphicon-pencil" %></th>
+        <th><%= link_to '', edit_project_path(project), remote: true, class: "glyphicon glyphicon-pencil edit_project_name", id: project.id %></th>
         <th><%= link_to '', project, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></th>
       </tr>
     </thead>
