added ability to rename projects with Ajax query. fixed set/remove stroked class to tasks

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -88,5 +88,7 @@ footer {
     }
   }
 }
-
+                                                      /*pages style*/
 .stroked{text-decoration: line-through;}
+.input-group.add_tast_to_project{width: 97%;}
+.input-group.edit_project_name{width: 100%;}
