--- a/app/views/pages/todolist.html.erb
+++ b/app/views/pages/todolist.html.erb
@@ -23,4 +23,10 @@
 <br><br><br>
 
 <% end %>
-<%= link_to 'Add ToDoList', new_project_path, class: "btn btn-success", id: "addTDL", title: "Создать новый проэкт" %>
+
+<div class="row">
+    <div class="col-lg-4"></div>
+    <div class="col-lg-1">
+        <%= link_to 'Add ToDoList', new_project_path, class: "btn btn-success", id: "addTDL", title: "Создать новый проэкт" %>
+    </div>
+  </div>
