--- a/app/views/pages/_form_for_add_task.html.erb
+++ b/app/views/pages/_form_for_add_task.html.erb
@@ -16,8 +16,8 @@
         <th class="done">+</th>
         
           <th colspan="4" class="projects">
-            <div class="input-group">
-                <%= f.text_field :name, :class => 'form-control', placeholder: 'Start typing here to create a task...' %>
+            <div class="input-group add_tast_to_project">
+                <%= f.text_field :name, class: 'form-control', placeholder: 'Start typing here to create a task...' %>
                 <%= f.hidden_field :project_id, value: @project_id %> <!-- Add Task to direct Project -->
               <span class="input-group-btn">
                 <%= f.submit 'Add Task', :class => 'btn btn-success addTask' %>
