add edit to tasks but need to correct error

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -92,3 +92,8 @@ footer {
 .stroked{text-decoration: line-through;}
 .input-group.add_tast_to_project{width: 97%;}
 .input-group.edit_project_name{width: 100%;}
+
+                                                      /*tables*/
+/*thead tr th { background: linear-gradient(to top, #1462b5, #71ceef);}
+/*tbody tr td {background: #FFFFFF;}*/
+/*th.projects{font: italic bold 14px/1.5 Times, 'New Century Schoolbook', serif;} /*for projects name*/
