--- a/app/views/pages/_form_for_filling_project_by_task.html.erb
+++ b/app/views/pages/_form_for_filling_project_by_task.html.erb
@@ -5,7 +5,7 @@
         <td class="tasks"><%= task.name %></td>
        
         <td class="move control" ><span class="glyphicon glyphicon-upload" aria-hidden="true"></span>|</td>
-        <td><%= link_to '', edit_task_path(task), class: "glyphicon glyphicon-pencil" %></td>
+        <td><%= link_to '', edit_task_path(task), remote: true, class: "glyphicon glyphicon-pencil edit_task_bt", id: 'bt_edit_id_'+task.id.to_s %></td>
         <td>|<%= link_to '', task, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></td>
         
       </tr>
