--- a/app/views/pages/todolist.html.erb
+++ b/app/views/pages/todolist.html.erb
@@ -4,7 +4,7 @@
     <!--PROJECTS-->
       <tr>
         <th class="done"><span class=""></span></th>
-        <th colspan="2" id= <%="project_name_#{project.id}"%> ><%= project.name %></th>
+        <th colspan="2" class="projects" id= <%="project_name_#{project.id}"%> ><%= project.name %></th>
 
         <% @project_id = project.id %> <!-- Add Task to direct Project -->
 
