--- a/app/views/pages/_form_for_add_task.html.erb
+++ b/app/views/pages/_form_for_add_task.html.erb
@@ -13,9 +13,9 @@
   <% end %>
 
     <tr>
-        <th class="done">+</th>
+        <th class="control_left_side"><span class="glyphicon glyphicon-plus-sign"></th>
         
-          <th colspan="4" class="projects">
+          <th colspan="6" class="projects">
             <div class="input-group add_tast_to_project">
                 <%= f.text_field :name, class: 'form-control', placeholder: 'Start typing here to create a task...' %>
                 <%= f.hidden_field :project_id, value: @project_id %> <!-- Add Task to direct Project -->
