--- a/app/views/pages/_form_for_filling_project_by_task.html.erb
+++ b/app/views/pages/_form_for_filling_project_by_task.html.erb
@@ -1,12 +1,14 @@
     <% @sort_tasks = @tasks.where(project_id: @project_id) %>
     <% @sort_tasks.each do |task| %>
       <tr class="forchack">
-        <td><%= check_box_tag task.id, task.status, task.status, class: 'checked' %></td>  
+        <td class="control_left_side"><%= check_box_tag task.id, task.status, task.status, class: 'checked' %></td>  
         <td class="tasks"><%= task.name %></td>
        
-        <td class="move control" ><span class="glyphicon glyphicon-upload" aria-hidden="true"></span>|</td>
-        <td><%= link_to '', edit_task_path(task), remote: true, class: "glyphicon glyphicon-pencil edit_task_bt", id: 'bt_edit_id_'+task.id.to_s %></td>
-        <td>|<%= link_to '', task, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="control"><span class="glyphicon glyphicon-calendar deadline"></span></td>
+        <td class="control"><span class="glyphicon glyphicon glyphicon-arrow-up" aria-hidden="true"></span></td>
+        <td class="control"><span class="glyphicon glyphicon glyphicon-arrow-down" aria-hidden="true"></span></td>
+        <td class="control"> <%= link_to '', edit_task_path(task), remote: true, class: "glyphicon glyphicon-pencil edit_task_bt", id: 'bt_edit_id_'+task.id.to_s %> </td>
+        <td class="control"> <%= link_to '', task, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %> </td>
         
       </tr>
     <% end %>
