--- a/app/views/pages/todolist.html.erb
+++ b/app/views/pages/todolist.html.erb
@@ -3,14 +3,14 @@
     <thead>
     <!--PROJECTS-->
       <tr>
-        <th class="done"><span class=""></span></th>
-        <th colspan="2" class="projects" id= <%="project_name_#{project.id}"%> ><%= project.name %></th>
+        <th class="control_left_side"><span class="glyphicon glyphicon-qrcode"></span></th>
+        <th colspan="4" class="projects" id= <%="project_name_#{project.id}"%> ><%= project.name %></th>
 
         <% @project_id = project.id %> <!-- Add Task to direct Project -->
 
         <%= hidden_field_tag(:projects, project.id) %>
-        <th><%= link_to '', edit_project_path(project), remote: true, class: "glyphicon glyphicon-pencil edit_project_name", id: project.id %></th>
-        <th><%= link_to '', project, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></th>
+        <th class="control"><%= link_to '', edit_project_path(project), remote: true, class: "glyphicon glyphicon-pencil edit_project_name", id: project.id %></th>
+        <th class="control"><%= link_to '', project, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></th>
       </tr>
     </thead>
 
