--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -97,3 +97,8 @@ a{
   color: rgba(176,196,222, 0.8);
   text-decoration: none; /* Убирает подчеркивание для ссылок */
 } 
+td.zero{
+  color: red;
+  width: 0px;
+ 
+}
