--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -97,8 +97,21 @@ a{
   color: rgba(176,196,222, 0.8);
   text-decoration: none; /* Убирает подчеркивание для ссылок */
 } 
-td.zero{
-  color: red;
-  width: 0px;
- 
+.select_deadline_field_input{
+  width: 108px;
+}
+
+
+.table > thead > tr > th, .table > thead > tr > td, .table > tbody > tr > th, .table > tbody > tr > td, .table > tfoot > tr > th, .table > tfoot > tr > td{
+  vertical-align: center !important;
+}
+.save_deadline_send_ajax{
+  text-shadow: 1px 1px 2px black, 0 0 1em blue;
+  border-left: 1px solid grey;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+.save_deadline_field{
+  padding-left: 8px;
+  padding-right: 4px;
 }
