--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -11,12 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    
+  <div class="input-group create_new_project">
+    
+    <%= f.text_field :name, class: 'form-control', placeholder: 'Start typing here to create a new project...' %>
     <%= f.hidden_field :user_id, value: @user_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+    <span class="input-group-btn">
+      <%= f.submit 'Create', remote: true, class: 'btn btn-success create_new_project_bt' %>
+    </span>
   </div>
 <% end %>
