--- a/app/views/projects/_show_project.html.erb
+++ b/app/views/projects/_show_project.html.erb
@@ -1,5 +1,5 @@
-<% @projects.each do |project| %>
-<table class="table table-hover">
+
+  <table class="table table-hover">
     <thead>
     <!--PROJECTS-->
       <tr>
@@ -14,21 +14,9 @@
       </tr>
     </thead>
 
-    <%= render 'form_for_add_task' %> 
+    <%= render 'pages/form_for_add_task' %> 
 
     <tbody>
-      <%= render 'form_for_filling_project_by_task' %> 
+      <%= render '/pagesform_for_filling_project_by_task' %> 
     </tbody>
   </table>
-<br><br><br>
-<% end %>
-
-
-  <div class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-1">
-        <% link_to 'Add ToDoList', new_project_path, remote: true, class: "btn btn-success", id: 'add_project', title: "Создать новый проэкт" %>
-        <%= render 'modal' %>
-    </div>
-  </div>
-
