--- a/app/views/pages/_form_for_add_task.html.erb
+++ b/app/views/pages/_form_for_add_task.html.erb
@@ -1,29 +1,27 @@
-
-  <%= form_for(@task) do |f| %>
-  <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
-
-      <ul>
-      <% @task.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-    <tr>
-        <th class="control_left_side"><span class="glyphicon glyphicon-plus-sign"></th>
+<tr class="put_task_after_me">
+  <th class="control_left_side"><span class="glyphicon glyphicon-plus-sign"></span></th>
+  <th colspan="6" class="projects">
+    <%= form_for(@task) do |f| %>
         
-          <th colspan="6" class="projects">
-            <div class="input-group add_tast_to_project">
-                <%= f.text_field :name, class: 'form-control add_tast_to_project_form', placeholder: 'Start typing here to create a task...' %>
-                <%= f.hidden_field :project_id, value: @project_id %> <!-- Add Task to direct Project -->
-                <%= f.hidden_field :rating, value: Time.new %>
-              <span class="input-group-btn">
-                <%= f.submit 'Add Task', remote: true, class: 'btn btn-success addTask' %>
-              </span>
-            </div>
-        </th>
-    </tr>
-  <% end %>
+        <% if @task.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
+            <ul> <% @task.errors.full_messages.each do |msg| %>
+                 <li><%= msg %></li>
+                 <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+    <span class="input-group add_tast_to_project">
+        <%= f.text_field :name, class: 'form-control add_tast_to_project_form', placeholder: 'Start typing here to create a task...' %>
+        <%= f.hidden_field :project_id, value: @project_id %> <!-- Add Task to direct Project -->
+        <%= f.hidden_field :rating, value: Time.new %>
+        <span class="input-group-btn">
+          <%= f.submit 'Add Task', remote: true, class: 'btn btn-success addTask' %>
+        </span>
+    </span>
+    <% end %>
+  </th>
+</tr>
+  
