--- a/app/views/pages/_form_for_add_task.html.erb
+++ b/app/views/pages/_form_for_add_task.html.erb
@@ -14,7 +14,7 @@
         <% end %>
 
     <span class="input-group add_tast_to_project">
-        <%= f.text_field :name, class: 'form-control add_tast_to_project_form', placeholder: 'Start typing here to create a task...' %>
+        <%= f.text_field :name, class: 'form-control add_tast_to_project_form', placeholder: 'Start typing here to create a task...', maxlength: 200, required: true %>
         <%= f.hidden_field :project_id, value: @project_id %> <!-- Add Task to direct Project -->
         <%= f.hidden_field :rating, value: Time.new %>
         <span class="input-group-btn">
