--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -14,7 +14,7 @@
     
   <div class="input-group create_new_project">
     
-    <%= f.text_field :name, class: 'form-control', placeholder: 'Start typing here to create a new project...' %>
+    <%= f.text_field :name, class: 'form-control', placeholder: 'Start typing here to create a new project...', maxlength: 50, required: true %>
     <%= f.hidden_field :user_id, value: @user_id %>
     <span class="input-group-btn">
       <%= f.submit 'Create', remote: true, class: 'btn btn-success create_new_project_bt' %>
