--- a/app/views/pages/_form_for_add_task.html.erb
+++ b/app/views/pages/_form_for_add_task.html.erb
@@ -1,4 +1,4 @@
-<tr class="put_task_after_me">
+<tr>
   <th class="control_left_side"><span class="glyphicon glyphicon-plus-sign"></span></th>
   <th colspan="6" class="projects">
     <%= form_for(@task) do |f| %>
@@ -16,7 +16,7 @@
     <span class="input-group add_tast_to_project">
         <%= f.text_field :name, class: 'form-control add_tast_to_project_form', placeholder: 'Start typing here to create a task...', maxlength: 200, required: true %>
         <%= f.hidden_field :project_id, value: @project_id %> <!-- Add Task to direct Project -->
-        <%= f.hidden_field :rating, value: Time.new %>
+        <%= f.hidden_field :rating, value: Time.now %>
         <span class="input-group-btn">
           <%= f.submit 'Add Task', remote: true, class: 'btn btn-success addTask' %>
         </span>
