--- a/app/views/pages/todolist.html.erb
+++ b/app/views/pages/todolist.html.erb
@@ -12,14 +12,12 @@
         <th class="control"><%= link_to '', edit_project_path(project), remote: true, class: "glyphicon glyphicon-pencil edit_project_name", id: project.id %></th>
         <th class="control"><%= link_to '', project, remote: true, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></th>
       </tr>
-    </thead>
-
-    <tbody>
       <%= render 'form_for_add_task' %>
+    </thead>
+    <tbody class="put_task_inside_me">
       <%= render 'form_for_filling_project_by_task' %> 
     </tbody>
   </table>
-<br><br><br>
 <% end %>
 
 
