--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -125,3 +125,14 @@ td, th {
   padding-left: 8px;
   padding-right: 4px;
 }
+
+img.ajax_loader{
+  visibility: hidden;
+  position: fixed;
+  z-index: 16777271;
+  top: 50%;
+  left: 50%;
+  height: 30px;
+  width: 30px;
+  margin: -15px 0 0 -15px;
+}
