--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
 			</div>
 		</div>
 	</div>
+	<%= image_tag("ajax-loader.gif", :alt => "loader", class: "ajax_loader") %>
 	<div class="row">
 		<%= render 'layouts/footer' %>
 		
