--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,9 +4,9 @@
     </small>
   <nav>
     <ul  class="footer">
-      <li>Help</li>
-      <li>About</li>
-      <li><a href="#">News</a></li>
+      <li><%= link_to "TODO LISTS ", root_path %></li>
+      <li><%= link_to " Profile ", profile_path %></li>
+      <li><%= link_to " SQL", sql_path %></li>
     </ul>
   </nav>
 </footer>
