--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,36 @@
+
+<div class="row">
+<div class="col-md-4 col-md-offset-4">
+<div class="login_to_account">
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <br />
+    <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "Email" %>
   </div>
-
+<br>
   <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
+    <% if @validatable %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Password", required: true %>
   </div>
-
+<br>
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Password confirmation", required: true %>
   </div>
-
+<br>
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class: "btn btn-lg btn-primary btn-block btn-signin" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+  </div>
+  </div>
+</div>
