--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,29 +1,51 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header>
   
-    <div class="container">
-      <%= link_to "ToDoList", root_path, id: "logo" %>
-      <nav>
-       <% if user_signed_in? %>
-        <ul class="nav navbar-nav pull-left">
-          <li><%= link_to "SQL Tas" %></li>  
-          <li><%= link_to "Lists", todolist_path%></li>
-        </ul>
-        
-        <ul class="nav navbar-nav navbar-right">
-  
-              <span class="hi">Hi, <%= current_user.email %></span>
-              <li><%= link_to 'Log Out ', destroy_user_session_path, class: "glyphicon glyphicon-user", :method => :delete %></li>
-          
-            <% else %>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
 
-        <ul class="nav navbar-nav navbar-right"><!-- Дублируется после else  -->
-              <li><%= link_to ' Login ', new_user_session_path, class: "glyphicon glyphicon-log-in" %></li> 
-              <li> <%= link_to 'Sign Up ', new_user_registration_path, class: "glyphicon glyphicon-user" %></li>
-          
-
-        </ul>
-        <% end %>
-      </nav>
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "TODO LISTS", root_path, class: "navbar-brand" %>
     </div>
+
+    <% if user_signed_in? %>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><%= link_to "SQL Task", content_tag(:span, "(current)", class: "sr-only") %></li>
+      </ul>
+      <ul class="navbar-form navbar-left">
+          <span class="welcome"> Welcome: <%= current_user.email %></span>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "go to SQL Task", sql_path %></li>
+            <li><a href="#">All tasks</a></li>
+            <li><%= link_to "ToDo lists", root_path %></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to  "Exit", destroy_user_session_path, :method => :delete %></li>
+          </ul>
+        </li>
+        <li><%= link_to  content_tag(:span, '', class: "glyphicon glyphicon-log-out"), destroy_user_session_path, :method => :delete %></li>
+      </ul>
+      <% else %>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to 'Please log in', new_user_session_path %></li>
+          <li><%= link_to content_tag(:span, '', class: "glyphicon glyphicon-log-in"), new_user_session_path %></li>
+          <li><%= link_to ' or sign up', new_user_registration_path %></li>
+          <li><%= link_to content_tag(:span, '', class: "glyphicon glyphicon-registration-mark"), new_user_registration_path %></li>
+        </ul>
+      <% end %>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
   
 </header>
