--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <%= favicon_link_tag 'favicon.ico' %>
   <title>ToDoList</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
@@ -13,8 +14,8 @@
 	<p class="alert"><%= alert %></p>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-2"></div>
-			<div class="col-lg-7">
+			<div class="col-lg-2 col-sm-0"></div>
+			<div class="col-lg-8 col-sm-12">
 				<%= yield %>		
 			</div>
 		</div>
