--- a/app/views/pages/todolist.html.erb
+++ b/app/views/pages/todolist.html.erb
@@ -22,8 +22,8 @@
 
 
   <div class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-1">
+    <div class="col-lg-4 col-sm-4"></div>
+    <div class="col-lg-2 col-sm-4">
         <% link_to 'Add ToDoList', new_project_path, remote: true, class: "btn btn-success", id: 'add_project', title: "Создать новый проэкт" %>
         <%= render 'modal' %>
     </div>
