--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-2 col-sm-0"></div>
-			<div class="col-lg-8 col-sm-12">
+			<div class="col-lg-8 col-sm-12 target_for_project">
 				<%= yield %>		
 			</div>
 		</div>
