--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><%= link_to "SQL Task", content_tag(:span, "(current)", class: "sr-only") %></li>
+        <li><%= link_to content_tag(:span, "(current)", class: "sr-only"), sql_path %></li>
       </ul>
       <ul class="navbar-form navbar-left">
           <span class="welcome"> Welcome: <%= current_user.email %></span>
