add left days to view

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -195,3 +195,10 @@ img.ajax_loader{
 .sql_header{
   text-align: center;
 }
+.left_days{
+  width: 85px;
+  height: 15px;
+  color: grey;
+  padding-right: 0px!important;
+  padding-left: 1px!important;
+}
