--- a/app/views/pages/_form_for_filling_project_by_task.html.erb
+++ b/app/views/pages/_form_for_filling_project_by_task.html.erb
@@ -2,7 +2,12 @@
     <% @sort_tasks.each do |task| %>
       <tr class="forchack" id=<%= 'tr_task_id_'+task.id.to_s %>>
         <td class="control_left_side"><%= check_box_tag task.id, task.status, task.status, class: 'checked' %></td>  
-        <td class="tasks"><%= task.name %></td>    
+        <td class="tasks"><%= task.name %></td>
+            <% if (task.deadline && !task.status)  %>
+
+                <% left_days =  "left "+(task.deadline.to_date - Time.now.to_date).to_i.to_s + " day".pluralize((task.deadline.to_date - Time.now.to_date).to_i) %>
+            <% end %>
+        <td class="left_days"><%= left_days %></td>    
         <td class="control calendar"><span class="glyphicon glyphicon-calendar deadline" title= <%= task.deadline ? task.deadline : "Set_deadline" %> ></span></td>
         
         <td class="control"><span class="glyphicon glyphicon glyphicon-arrow-up" aria-hidden="true"></span></td>
