--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,9 @@
 <footer class="footer">
 	  <small>
-      for Ruby Garage <a href="http://vk.com/neon_ua"> by Galenko</a>
+      for Ruby Garage <a target="_blank" href="http://vk.com/neon_ua"> by Galenko</a>
     </small>
   <nav>
     <ul  class="footer">
-      <li><%= link_to "TODO LISTS ", root_path %></li>
       <li><%= link_to " Profile ", profile_path %></li>
       <li><%= link_to " SQL", sql_path %></li>
     </ul>
