--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "go to SQL Task", sql_path %></li>
-            <li><a href="#">All tasks</a></li>
+            <li><%= link_to "about user", profile_path %></li>
             <li><%= link_to "ToDo lists", root_path %></li>
             <li role="separator" class="divider"></li>
             <li><%= link_to  "Exit", destroy_user_session_path, :method => :delete %></li>
