formated JS, add dynamic title, remove unnecessary files

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,4 @@
-
+  
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -134,7 +134,7 @@ td.tasks{ /*color of tasks name*/
     color: rgba(255,255,255, 0.8);
   }
 }
-a.glyphicon.control_right_side{
+.glyphicon.control_right_side{
   color: rgba(211,211,211, 0.9); 
 }
 
