--- a/app/views/pages/_form_for_filling_project_by_task.html.erb
+++ b/app/views/pages/_form_for_filling_project_by_task.html.erb
@@ -8,11 +8,11 @@
                 <% left_days =  "left "+(task.deadline.to_date - Time.now.to_date).to_i.to_s + " day".pluralize((task.deadline.to_date - Time.now.to_date).to_i) %>
             <% end %>
         <td class="left_days"><%= left_days %></td>    
-        <td class="control calendar"><span class="glyphicon glyphicon-calendar deadline" title= <%= task.deadline ? task.deadline : "Set_deadline" %> ></span></td>
+        <td class="control calendar"><span class="glyphicon glyphicon-calendar deadline" title= <%= task.deadline ? task.deadline : "Set deadline" %> ></span></td>
         
         <td class="control"><span class="glyphicon glyphicon glyphicon-arrow-up" aria-hidden="true"></span></td>
         <td class="control"><span class="glyphicon glyphicon glyphicon-arrow-down" aria-hidden="true"></span></td>
-        <td class="control"> <%= link_to '', '#', remote: true, class: "glyphicon glyphicon-pencil edit_task_bt", id: 'bt_edit_id_'+task.id.to_s %> </td> <!-- edit_task_path(task) -->
+        <td class="control"><span class="glyphicon glyphicon-pencil edit_task_bt" id = <%='bt_edit_id_'+task.id.to_s %>  aria-hidden="true"></span></td>
         <td class="control"> <%= link_to '', task, remote: true, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %> </td>
       </tr>
     <% end %>
