--- a/app/views/pages/todolist.html.erb
+++ b/app/views/pages/todolist.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'ToDoList') %>
+<% provide(:title, 'Home') %>
 <% @projects.each do |project| %>
 <table class="table table-hover">
     <thead>
@@ -10,7 +10,7 @@
         <% @project_id = project.id %> <!-- Add Task to direct Project -->
 
         <%= hidden_field_tag(:projects, project.id) %>
-        <th class="control"><%= link_to '', '#', remote: true, class: "glyphicon glyphicon-pencil edit_project_name control_right_side", id: project.id %></th> <!-- edit_project_path(project) -->
+         <th class="control"><span class="glyphicon glyphicon-pencil edit_project_name control_right_side" id = <%=project.id %> ></span></th>
         <th class="control"><%= link_to '', project, remote: true, class: "glyphicon glyphicon-trash control_right_side", method: :delete, data: { confirm: 'Are you sure?' } %></th>
       </tr>
       <%= render 'form_for_add_task' %>
