--- a/app/assets/stylesheets/persons.scss
+++ b/app/assets/stylesheets/persons.scss
@@ -1,3 +1,5 @@
-// Place all the styles related to the persons controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.device_form{
+	width: 200px;
+	margin: auto;
+	text-align: center;
+}
