--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,4 @@
-
-<div class="row">
-<div class="col-md-4 col-md-offset-4">
-<div class="login_to_account">
-
+<div class="device_form">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -31,6 +27,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
-  </div>
-  </div>
+
 </div>
