--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,10 @@
 				<%= yield %>		
 			</div>
 
-		<%= image_tag("ajax-loader.gif", :alt => "loader", class: "ajax_loader") %>
-		<div class="row">
-			<%= render 'layouts/footer' %>
+			<%= image_tag("ajax-loader.gif", :alt => "loader", class: "ajax_loader") %>
+			<div class="row">
+				<%= render 'layouts/footer' %>
+			</div>
 		</div>
 	</body>
 </html>
