--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -1,3 +1,26 @@
-// Place all the styles related to the Tasks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.add_tast_to_project_form{
+  font:  100% serif;
+  text-shadow: 0 0 4px rgba(211,211,211,0.9)
+}
+td.tasks{ /*color of tasks name*/
+  color: rgba(122,156,199, 0.9);
+  text-shadow: 0 0 2px rgba(0,0,0,0.2);
+}
+.glyphicon.control_right_side{ color: rgba(211,211,211, 0.9); }
+.save_deadline_send_ajax{
+  text-shadow: 1px 1px 2px black, 0 0 1em blue;
+  border-left: 1px solid grey;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+.save_deadline_field{
+  padding-left: 8px;
+  padding-right: 4px;
+}
+tr.forchack>td.left_days{
+  width: 77px;
+  height: 15px;
+  color: grey;
+  padding-right: 0px;
+  padding-left: 1px;
+}
